# Embedded_Linux

./: README.md  bash.sh  menu_script.sh  script5.h  task3_Linux.odt
AdminLinux_Task1/: script.sh
AdminLinux_Task2/: main.c
Calc_Project/: CMakeLists.txt  app.c
Calc_Project/include/: division.h
Calc_Project/src/: addition.c  main.c
Dynamic_lib/: division.c  dynamic_calc  modulus.c
Includes/: addition.h  modulus.h
sources/: division.c  modulus.c
static_lib/: calc_static.elf  main.c  operations.h  static_calc
